+Added basic authentication (login,register) +auth-cookie +Controlled form validations +Gave the website a new fresh and responsive look +Added new pages and components -Removed Footer (because of responsive design issues) -Form redirection issue (this.props.history problem)

--- a/src/components/LoginAndRegisterForms/forms-style.css
+++ b/src/components/LoginAndRegisterForms/forms-style.css
@@ -37,6 +37,16 @@ hr {
 .registerbtn:hover {
     opacity: 1;
 }
+button[disabled].registerbtn:hover{
+    
+    opacity: 0.4;
+    
+}
+button[disabled]{
+    border: 1px solid #999999;
+    opacity: 0.4;
+    
+}
 
 
 a {
