--- a/src/components/CreateAircraftForm/CreateAircraftForm.css
+++ b/src/components/CreateAircraftForm/CreateAircraftForm.css
@@ -1,8 +1,16 @@
-input[type=text], input[type=number], input[type=password] {
+input[type=text], input[type=number], input[type=password]{
     width: 50%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
+    padding: 5px;
+    margin: 0px 0 10px 0;
     display: inline-block;
+    border: none;
+    background: #f1f1f1;
+}
+select{
+    width: 50%;
+    padding: 5px;
+    margin: 0px 0 10px 0;
+    display: inline-flex;
     border: none;
     background: #f1f1f1;
 }
@@ -15,7 +23,7 @@ input[type=text]:focus, input[type=number]:focus, input[type=password]:focus {
 
 hr {
     border: 1px solid #f1f1f1;
-    margin-bottom: 25px;
+    margin-bottom: 2px;
 }
 
 .createBtn {
@@ -27,6 +35,9 @@ hr {
     cursor: pointer;
     width: 50%;
     opacity: 0.9;
+}
+#b{
+    font-weight: bolder;
 }
 
 .createBtn:hover {
